maybe fixed scrolling on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,6 +49,7 @@ body {
   min-width: 320px;
   /*padding-top: 60px;      /* offset fixed navbar */
   background-color: #ffffff;
+  -webkit-overflow-scrolling: touch;
 }
 
 h1 {
